--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^16.0.0",
+    "body-parser": "^1.19.0",
+    "ckeditor": "^4.12.1",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.10",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0"
-    
+  },
+  "devDependencies": {
+    "handlebars": "^4.5.0"
   }
 }
